--- a/src/app/components/side-components/profile/profile.component.html
+++ b/src/app/components/side-components/profile/profile.component.html
@@ -49,7 +49,7 @@
       <img
         alt=""
         class="rounded-circle avatar-lg img-thumbnail"
-        src="../../../../assets/profile.png"
+        src="{{item.profilePicture}}"
       />
     </div>
     <h5 class="font-size-12 mb-1 text-truncate">
