--- a/src/app/components/side-components/contacts/add-contacts/add-contacts.component.css
+++ b/src/app/components/side-components/contacts/add-contacts/add-contacts.component.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 30rem;
+    /* width: 30rem; */
     pointer-events: auto;
     background-color: #272c3b;
     background-clip: padding-box;
