--- a/src/app/components/side-components/contacts/contacts.component.html
+++ b/src/app/components/side-components/contacts/contacts.component.html
@@ -8,6 +8,7 @@
             class="fas fa-user-plus"
             title="Add Contact"
             style="cursor: pointer"
+            (click)="openDialog()"
           ></i>
         </div>
       </div>
@@ -26,56 +27,8 @@
         <h4>A</h4>
       </div>
 
-      <div class="navbar navbar-light px-5">
-        <h6 class="contacts">Albert Rodarte</h6>
-
-        <div class="mb-2">
-          <i
-            class="fas fa-ellipsis-v"
-            style="cursor: pointer; font-size: 0.9em"
-          ></i>
-        </div>
-      </div>
-      <div class="navbar navbar-light px-5">
-        <h6 class="contacts">Albert Rodarte</h6>
-
-        <div class="mb-2">
-          <i
-            class="fas fa-ellipsis-v"
-            style="cursor: pointer; font-size: 0.9em"
-          ></i>
-        </div>
-      </div>
-      <div class="contact-block mt-4">
-        <h4>C</h4>
-      </div>
-
-      <div class="navbar navbar-light px-5">
-        <h6 class="contacts">Craig Smiley</h6>
-
-        <div class="mb-2">
-          <i
-            class="fas fa-ellipsis-v"
-            style="cursor: pointer; font-size: 0.9em"
-          ></i>
-        </div>
-      </div>
-      <div class="contact-block mt-4">
-        <h4>D</h4>
-      </div>
-
-      <div class="navbar navbar-light px-5">
-        <h6 class="contacts">Daniel Clay</h6>
-
-        <div class="mb-2">
-          <i
-            class="fas fa-ellipsis-v"
-            style="cursor: pointer; font-size: 0.9em"
-          ></i>
-        </div>
-      </div>
-      <div class="navbar navbar-light px-5">
-        <h6 class="contacts">Doris Brown</h6>
+      <div class="navbar navbar-light px-5"  *ngFor="let item of users">
+        <h6 class="contacts">{{item.name}}</h6>
 
         <div class="mb-2">
           <i
