--- a/src/styles.css
+++ b/src/styles.css
@@ -74,3 +74,14 @@ h6 {
   }
 }
 
+.btn-primary {
+  color: #fff;
+  background-color: #7269ef;
+  border-color: #7269ef;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: #6159cb;
+  border-color: #5b54bf;
+}
