--- a/src/app/components/side-components/chat-page/chat-page.component.html
+++ b/src/app/components/side-components/chat-page/chat-page.component.html
@@ -1,5 +1,5 @@
 <div class="chat-leftsidebar me-lg-1">
-  <div class="tab-content">
+  <div class="tab-content" >
     <div class="container">
       <div class="px-4 pt-4">
         <h4 class="chat-title">Chats</h4>
@@ -22,102 +22,23 @@
           </p>
         </div>
       </div>
-      <div class="chat-box mt-4">
+      <div class="chat-box mt-4" *ngFor="let item of allMessages">
         <div class="chat-block">
           <div class="imgbx">
             <img
               alt=""
               class="rounded-circle avatar-lg img-thumbnail cover"
-              src="../../../../assets/profile.png"
+              src="{{item.recipient.profilePicture}}"
             />
             <span class="online_icon"></span>
           </div>
           <div class="details">
             <div class="listHead">
-              <h4>Patrick Hendricks</h4>
+              <h4>{{item.recipient.name}}</h4>
               <p class="time">05min</p>
             </div>
             <div class="message">
-              <p>Hey! there I'm available</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="chat-block">
-          <div class="imgbx">
-            <img
-              alt=""
-              class="rounded-circle avatar-lg img-thumbnail cover"
-              src="../../../../assets/profile.png"
-            />
-            <span class="online_icon offline"></span>
-          </div>
-          <div class="details">
-            <div class="listHead">
-              <h4>Mark Messer</h4>
-              <p class="time">12min</p>
-            </div>
-            <div class="message">
-              <p>Images</p>
-              <b>02</b>
-            </div>
-          </div>
-        </div>
-
-        <div class="chat-block">
-          <div class="imgbx">
-            <img
-              alt=""
-              class="rounded-circle avatar-lg img-thumbnail cover"
-              src="../../../../assets/profile.png"
-            />
-          </div>
-          <div class="details">
-            <div class="listHead">
-              <h4>General</h4>
-              <p class="time">20min</p>
-            </div>
-            <div class="message">
-              <p>This theme is awesome!</p>
-            </div>
-          </div>
-        </div>
-        <div class="chat-block">
-          <div class="imgbx">
-            <img
-              alt=""
-              class="rounded-circle avatar-lg img-thumbnail cover"
-              src="../../../../assets/profile.png"
-            />
-            <span class="online_icon"></span>
-          </div>
-          <div class="details">
-            <div class="listHead">
-              <h4>Doris Brown</h4>
-              <p class="time">10:12 AM</p>
-            </div>
-            <div class="message">
-              <p>Nice to meet you</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="chat-block">
-          <div class="imgbx">
-            <img
-              alt=""
-              class="rounded-circle avatar-lg img-thumbnail cover"
-              src="../../../../assets/profile.png"
-            />
-          </div>
-          <div class="details">
-            <div class="listHead">
-              <h4>Designer</h4>
-              <p class="time">12:01 PM</p>
-            </div>
-            <div class="message">
-              <p>Next meeting tomorrow 10:00AM</p>
-              <b>01</b>
+              <p>{{item.messages.slice(-1)[0].content}}</p>
             </div>
           </div>
         </div>
