--- a/src/app/components/side-components/groups/add-group/add-group.component.css
+++ b/src/app/components/side-components/groups/add-group/add-group.component.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 30rem;
+    width: 100%;
     pointer-events: auto;
     background-color: #272c3b;
     background-clip: padding-box;
