--- a/src/app/components/side-components/groups/groups.component.css
+++ b/src/app/components/side-components/groups/groups.component.css
@@ -66,7 +66,9 @@
     position: relative;
     overflow-y: auto;
     height: calc(100% - 110px);
-    margin-top: 4em;
+    /* margin-top: 4em; */
+    padding: 1em;
+    overflow-y: hidden;
 }
 
 .group-box .group-block {
